# soutei

./: Makefile  README  Soutei.cabal  soutei-cli.hs  soutei-pipelined.hs  soutei-server.hs
Soutei/: Assertions.hs  Check.hs  Client.hs  FBackTrack.hs  FBackTrackT.hs  GBBFS.hs  GBBFS1.hs  Lirs.hs  Logic.hs  Parsec.hs  Sexpr.hs  Soutei.hs  Syntax.hs
demo/metcast-channels/: Makefile  soutei-metcast-demo-init.txt  soutei-metcast-tests.hs
demo/metcast-channels/doc/: 00.html  01.html  06.html  07.html  08.html  09.html  11.html  Makefile  index.html  notes  soutei.fig
demo/rbac/: run-test.sh  system
demo/rbac/local/: SOUTEI
demo/rbac/local/assertions/: TPS-report-owner  app-owner  hr
doc/: Auth-transport.html  Auth-transport.scm  Auth-use-cases.html  Auth-use-cases.scm  Authorization.html  Authorization.scm  index.html  soutei-sourceforge.scm
